More alignment Alignment of the header was updated, day selector centered Dynamic progress bar coloring, Issue and worklog boxes have dynamic width, Calendar centered if summary visible Calendar invisible if window width < 800px Summary table has maximum width, and aligned to right, Form validation and coloring by HTML

--- a/css/jttp.css
+++ b/css/jttp.css
@@ -1,149 +1,187 @@
-
 /* Common format */
-
-table.aui > thead > tr > th{
-    color: #707070;
+table.aui>thead>tr>th {
+  color: #707070;
 }
 
 /* Headline alignment */
-
-div.jttp-headline {
-	height: 2rem;
-    padding-bottom: 1rem;
+div#jttp-headline {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  height: 2rem;
+  padding-bottom: 1rem;
 }
 
-div.jttp-headline-progress-number {
-	float: right; 	
+/* Progress */
+div#jttp-headline-progress {
+  float: left;
+  width: 15rem;
+  height: 100%;
+}
+div#jttp-headline-progress-number {
+  float: right;
+}
+div#jttp-headline-progress-bar {
+  width: 15rem;
+  height: 100%;
 }
 
-div.jttp-headline-progress-bar {
-	width: 15rem;
-	height: 100%;
+/* Day stepper */
+div#jttp-headline-day-stepper-container {
+  width: 20rem;
+  min-width: 20rem;
+  height: 100%;
+  border: none;
 }
 
-div.progress {
-	float: left; 
-	width: 15rem;
-	height: 100%;    
+button#jttp-headline-day-calendar {
+  min-width: 15rem;
 }
 
-div.jttp-headline-day-stepper-container {
-	float: left;
-	width: calc(100% - 40rem);
-	min-width: 20rem;
-	height: 100%;
-	border: none;
-}
-
-div.jttp-headline-day-stepper-center {
-	display: block;
-	width: 20rem;
-	min-width: 20rem;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-button.jttp-headline-day-stepper-open-calendar {
-	min-width: 15rem;
-}
-
-div.jttp-headline-empty{
-	float: left; 
-	width: 20rem;
-	height: 100%;
-	padding-top: 0.25rem;
-	border: none;
+div#jttp-headline-empty {
+  width: 15rem;
+  height: 0rem;
 }
 
 /* Worklog table */
-
 section#jttp-worklog {
-	margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 #jttp-worklog-table tbody tr:hover {
-   background-color: #f5f5f5;
+  background-color: #f5f5f5;
 }
 
 table#jttp-worklog-table th#jttp-worklog-description {
-	min-width: 15rem;
-	width: 50%;
+  min-width: 15rem;
+  width: 50%;
 }
 
 table#jttp-worklog-table th#jttp-worklog-actions {
-	min-width: 5rem;
-	width: 5rem;
+  min-width: 5rem;
+  width: 5rem;
 }
 
 td.jttp-worklog-no-remaining {
-	color: red;
+  color: red;
 }
 
 /* TODO: It would be nice, if the user can turn row colring on or off in the settings. In this case, the hover coloring will be disabled. */
 /*
 table#jttp-worklog-table  tbody tr:nth-child(even) {
-    background: #FFF;
+  background: #FFF;
 }
 
 table#jttp-worklog-table tbody tr:nth-child(odd) {
-    background: #f5f5f5
+  background: #f5f5f5
 }
 */
 
-
-/* Bottom group */
-
+/* Bottom group flex */
 div#jttp-bottom-group {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	justify-content: flex-j;
-}
-
-div#jttp-bottom-group > div {
-	display:block;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
 
 /* Log work form */
+form#jttp-logwork-form {
+  margin: 0 0 0 0;
+}
+form#jttp-logwork-form :invalid { /* Invalid inputs from CSS, can transform to JS-controlled  */
+  border-color: red;
+  box-shadow: none;
+}
+ form#jttp-logwork-form :invalid:focus { /* Invalid inputs from CSS */
+  box-shadow: inset 0 1px 3px firebrick;
+  outline: none;
+ }
 
-#jttp-logwork {
-	min-width: 550px;
-	width: 550px;
+/* Change date button's section */
+section#jttp-change-date {
+  padding-top: 0;
 }
 
-div#jttp-worklog-time {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	justify-content: flex-start;
+/* Inline time input fields flex */
+div#jttp-logwork-time {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+}
+div#jttp-logwork-time > div.field-group {
+  width: auto;
+  margin-right: 1rem;
+}
+
+/* General fields */
+section#jttp-logwork-fields {
+  box-sizing: border-box;
+  min-width: 550px;
+  width: calc((100% - 250px) /2);
 }
 
 /* Calendar */
-
-section#jttp-calendar {
-	min-width: 250px;
-	width: 250px;
-	background: lightgray;
+section#jttp-logwork-calendar {
+  box-sizing: border-box;
+  min-width: 250px;
+  width: 250px;
+  background: lightgray;
 }
 
-/* Worklog summary table */
-
-section#jttp-worklog-summary  {
-	width: calc(100% - 800px); /* 100% minus width of calendar and log work form */
+/* Worklog summary */
+section#jttp-worklog-summary {
+  box-sizing: border-box;
+  width: calc((100% - 250px) /2);
 }
-
+section#jttp-worklog-summary > div {
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: 0px;
+}
 .jttp-row-header {
-    color: #707070;
-    font-weight:bold;
+  color: #707070;
+  font-weight: bold;
 }
 
-/* Hide summary if necessary */
-@media screen and (max-width: 1200px) {
-	
+
+/* 801px <= Screen size <= 1200px */ 
+@media screen and (max-width: 1200px) and (min-width: 801px) {
+  
+  /* General fields */
+  section#jttp-logwork-fields {
+    width: calc(100% - 250px);
+  }
+  
+  /* Calendar */
+  section#jttp-logwork-calendar {
+  }
+  
+  /* Worklog summary */
   section#jttp-worklog-summary {
     display: none;
   }
+
+}
+
+/* Screen size <= 800px */
+@media screen and (max-width: 800px) {
   
+  /* General fields */
+  section#jttp-logwork-fields {
+    width: 100%;
+  }
+  
+  /* Calendar */
+  section#jttp-logwork-calendar {
+    display: none;
+  }
+  
+  /* Worklog summary */
+  section#jttp-worklog-summary {
+    display: none;
+  }
   
 }
 
